fix(web): padding on whole website on mobile screen sizes

--- a/packages/web/src/app/shell/page-with-sidenav/page-with-sidenav.component.scss
+++ b/packages/web/src/app/shell/page-with-sidenav/page-with-sidenav.component.scss
@@ -32,7 +32,7 @@
   }
 
   @include breakpoints.breakpoint-up(Mobile) {
-    margin: 0 40px 16px;
+    margin: 0 16px 16px;
   }
 }
 
